Clean up directories

--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -8,7 +8,7 @@
     <h1>Shepherd's Pie Recipe</h1>
     <a href="../index.html">Home</a>
     <img
-      src="./images/Shepherds-Pie.jpeg"
+      src="../images/Shepherds-Pie.jpeg"
       alt="Shepherd's Pie"
       width="250"
       height="200"
