--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-
-    <a href="./recipes/shepherds-pie.html">Shepherd's Pie Recipe</a>
+    <ul>
+      <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie Recipe</a></li>
+      <li>
+        <a href="./recipes/ground-beef-stroganoff.html"
+          >Ground Beef Stroganoff Recipe</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
