Create Beef and Broccoli recipe and image, and link to index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
           >Ground Beef Stroganoff Recipe</a
         >
       </li>
+      <li>
+        <a href="./recipes/beef-and-broccoli.html">Beef and Broccoli Recipe</a>
+      </li>
     </ul>
   </body>
 </html>
