Add 'scroll to top' link to each page

--- a/recipes/beef-and-broccoli.html
+++ b/recipes/beef-and-broccoli.html
@@ -87,5 +87,7 @@
         thin the sauce if desired. Serve over white rice.
       </li>
     </ol>
+
+    <a href="#">Go to Top</a>
   </body>
 </html>
