--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -109,5 +109,7 @@
         the top is golden.) Sprinkle with chives and serve
       </li>
     </ol>
+
+    <a href="#">Go to Top</a>
   </body>
 </html>
