Add and link styles.css

--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Shepherd's Pie Recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <h1>Shepherd's Pie Recipe</h1>
