--- a/recipes/beef-and-broccoli.html
+++ b/recipes/beef-and-broccoli.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Beef and Broccoli Recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <h1>Beef and Broccoli Recipe</h1>
