--- a/recipes/ground-beef-stroganoff.html
+++ b/recipes/ground-beef-stroganoff.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ground Beef Stroganoff Recipe</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <h1>Ground Beef Stroganoff Recipe</h1>
