--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Shepherd's Pie Recipe</h1>
-    <a href="../index.html">Home</a>
+    <div class="container">
+      <a class="link" href="../index.html">Home</a>
+    </div>
     <img
       src="../images/Shepherds-Pie.jpeg"
       alt="Shepherd's Pie"
