--- a/recipes/ground-beef-stroganoff.html
+++ b/recipes/ground-beef-stroganoff.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Ground Beef Stroganoff Recipe</h1>
-    <a href="../index.html">Home</a>
+    <div class="container1">
+      <a class="link" href="../index.html">Home</a>
+    </div>
 
     <img
       src="../images/Ground-Beef-Stroganoff.jpeg"
