Add div container and link class to other <a> links and changed ol li style

--- a/recipes/beef-and-broccoli.html
+++ b/recipes/beef-and-broccoli.html
@@ -90,7 +90,8 @@
         thin the sauce if desired. Serve over white rice.
       </li>
     </ol>
-
-    <a href="#">Go to Top</a>
+    <div class="container1">
+    <a class="link" href="#">Go to Top</a>
+    </div>
   </body>
 </html>
