--- a/recipes/ground-beef-stroganoff.html
+++ b/recipes/ground-beef-stroganoff.html
@@ -70,7 +70,8 @@
         potatoes.
       </li>
     </ol>
-
-    <a href="#">Go to Top</a>
+    <div class="container1">
+      <a class="link" href="#">Go to Top</a>
+    </div>
   </body>
 </html>
