--- a/recipes/shepherds-pie.html
+++ b/recipes/shepherds-pie.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Shepherd's Pie Recipe</h1>
-    <div class="container">
+    <div class="container1">
       <a class="link" href="../index.html">Home</a>
     </div>
     <img
@@ -112,7 +112,8 @@
         the top is golden.) Sprinkle with chives and serve
       </li>
     </ol>
-
-    <a href="#">Go to Top</a>
+    <div class="container1">
+      <a class="link" href="#">Go to Top</a>
+    </div>
   </body>
 </html>
