Change link style on index.html and fix link style on recipe page

--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/shepherds-pie.html">Shepherd's Pie Recipe</a></li>
       <li>
-        <a href="./recipes/ground-beef-stroganoff.html"
+        <a class="links" href="./recipes/shepherds-pie.html"
+          >Shepherd's Pie Recipe</a
+        >
+      </li>
+      <li>
+        <a class="links" href="./recipes/ground-beef-stroganoff.html"
           >Ground Beef Stroganoff Recipe</a
         >
       </li>
       <li>
-        <a href="./recipes/beef-and-broccoli.html">Beef and Broccoli Recipe</a>
+        <a class="links" href="./recipes/beef-and-broccoli.html"
+          >Beef and Broccoli Recipe</a
+        >
       </li>
     </ul>
   </body>
