--- a/recipes/beef-and-broccoli.html
+++ b/recipes/beef-and-broccoli.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Beef and Broccoli Recipe</h1>
-    <div class="container1"></div>
+    <div class="container1">
       <a class="link" href="../index.html">Home</a>
     </div>
 
@@ -91,7 +91,7 @@
       </li>
     </ol>
     <div class="container1">
-    <a class="link" href="#">Go to Top</a>
+      <a class="link" href="#">Go to Top</a>
     </div>
   </body>
 </html>
